Online peers: add user icon and fix spacing

--- a/packages/thicket-webapp/src/App/Community/OnlinePeers/OnlinePeers.css
+++ b/packages/thicket-webapp/src/App/Community/OnlinePeers/OnlinePeers.css
@@ -53,15 +53,11 @@
 
 .onlinePeers-title{
   text-align: center;
-}
-
-.onlinePeers-title::after{
-  display: block;
-  content: '';
-  height: 1px;
-  background: #677897;
-  position: relative;
-  top: 0.5em;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #677897;
+  padding-bottom: 0.5em;
+  padding-left: 0.5em;
 }
 
 .onlinePeers-list{
@@ -74,6 +70,14 @@
 .onlinePeers-item{
   display: flex;
   align-items: center;
+}
+
+.onlinePeers-svg{
+  margin-left: 0.2em;
+}
+
+.onlinePeers-svg-inner{
+  display: none;
 }
 
 /* desktop */
@@ -104,6 +108,15 @@
 
   .onlinePeers-title{
     text-align: left;
+    padding-left: unset;
+  }
+
+  .onlinePeers-svg{
+    margin-right: 0.5em;
+  }
+
+  .onlinePeers-svg-inner{
+    display: block;
   }
 
   .onlinePeers-list{
